# sorting_app

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt
src/sorting_app/: __init__.py  app.py  stats.py
src/sorting_app/models/: __init__.py  attributes.py  tshirt.py
src/sorting_app/payment/: __init__.py  strategies.py
src/sorting_app/persistence/: __init__.py  repository.py
src/sorting_app/sorting/: __init__.py  algorithms.py  benchmark.py  service.py
src/sorting_app/ui/: __init__.py  colors.py  prompts.py
tests/: conftest.py  test_models.py  test_payment.py  test_persistence.py  test_sorting.py  test_stats.py
